--- a/index.html
+++ b/index.html
@@ -1,106 +1,98 @@
 <!doctype html>
 <html lang="fr">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Cartographie">
-    <meta name="author" content="Faits &amp; Documents">
-
-    <title>Cartographie</title>
-
-    <meta property="og:url" content="https://faitsetdocuments.com/cartographie">
-    <meta property="og:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png">
-    <meta property="og:title" content="Faits &amp; Documents" />
-    <meta property="og:description" content="Cartographie">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1352">
-    <meta property="og:image:height" content="350">
-    <meta property="og:url" content="https://faitsetdocuments.com/cartographie" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@faitsetdocs" />
-    <meta property="twitter:title" content="Faits &amp; Documents" />
-    <meta property="twitter:description" content="Cartographie" />
-    <meta property="twitter:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png" />
-
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-
-    <!-- Custom Theme CSS -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" sizes="32x32">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-</head>
-
-<body translate="no">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-light fixed-top navbar-expand-md">
-      <a class="navbar-brand" href="#"><img src="img/logo.png" width="138" height="30" alt="Faits &amp; Documents"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="nav nav-tabs navbar-nav top-buttons" role="tablist">
-          <li class="nav-item area-select">
-            <a class="nav-link area-link active" id="first-tab" data-area="Gouvernement" data-toggle="tab" href="#first" role="tab" aria-controls="first" aria-selected="true">Gouvernement</a>
-          </li>
-          <li class="nav-item area-select">
-            <a class="nav-link area-link" id="second-tab" href="#second" data-area="Assemblée nationale" data-toggle="tab" role="tab" aria-controls="second" aria-selected="false">Assemblée nationale</a>
-          </li>
-          <li class="nav-item area-select">
-            <a class="nav-link area-link" id="third-tab" href="#third" data-area="Sénat" data-toggle="tab" role="tab" aria-controls="third" aria-selected="false">Sénat</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="http://www.faitsetdocuments.com/#abonnez" target="_blank">Abonnez-vous</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://m.me/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
-          <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-          <li class="nav-item"><a class="nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
-        </ul>
+   <head>
+      <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="description" content="Cartographie">
+      <meta name="author" content="Faits &amp; Documents">
+      <title>Cartographie</title>
+      <meta property="og:url" content="https://faitsetdocuments.com/cartographie">
+      <meta property="og:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png">
+      <meta property="og:title" content="Faits &amp; Documents" />
+      <meta property="og:description" content="Cartographie">
+      <meta property="og:image:type" content="image/png">
+      <meta property="og:image:width" content="1352">
+      <meta property="og:image:height" content="350">
+      <meta property="og:url" content="https://faitsetdocuments.com/cartographie" />
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:site" content="@faitsetdocs" />
+      <meta property="twitter:title" content="Faits &amp; Documents" />
+      <meta property="twitter:description" content="Cartographie" />
+      <meta property="twitter:image" content="https://www.faitsetdocuments.com/img/Logo-fetd-site-2.png" />
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <!-- Custom Theme CSS -->
+      <link rel="stylesheet" href="css/main.css">
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png" sizes="32x32">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.4.0/css/bootstrap4-toggle.min.css" rel="stylesheet">
+      <!-- Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <!-- Custom JS -->
+      <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.4.0/js/bootstrap4-toggle.min.js"></script>
+   </head>
+   <body translate="no">
+      <!-- Navigation -->
+      <nav class="navbar navbar-light fixed-top navbar-expand-md">
+         <a class="navbar-brand" href="#"><img src="img/logo.png" width="138" height="30" alt="Faits &amp; Documents"></a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="nav nav-tabs navbar-nav top-buttons" role="tablist">
+               <li class="nav-item area-select">
+                  <a class="nav-link area-link active" id="first-tab" data-area="Gouvernement" data-toggle="tab" href="#first" role="tab" aria-controls="first" aria-selected="true">Gouvernement</a>
+               </li>
+               <li class="nav-item area-select">
+                  <a class="nav-link area-link" id="second-tab" href="#second" data-area="Assemblée nationale" data-toggle="tab" role="tab" aria-controls="second" aria-selected="false">Assemblée nationale</a>
+               </li>
+               <li class="nav-item area-select">
+                  <a class="nav-link area-link" id="third-tab" href="#third" data-area="Sénat" data-toggle="tab" role="tab" aria-controls="third" aria-selected="false">Sénat</a>
+               </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+               <li class="nav-item"><a class="nav-link" href="http://www.faitsetdocuments.com/#abonnez" target="_blank">Abonnez-vous</a></li>
+               <li class="nav-item"><a class="nav-link" href="https://m.me/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-messenger"></i></a></li>
+               <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/FaitsetDocuments" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+               <li class="nav-item"><a class="nav-link" href="https://twitter.com/faitsetdocs" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+         </div>
+      </nav>
+      <!-- Sidenav -->
+      <div id="sidenav" class="sidenav">
+         <h1 id="node" class="title"></h1>
+         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+         <div class="portrait text-center"><img id="portrait" class="d-none img-thumbnail" src="./img/portraits/Adrien Morenas.jpg" alt=""></div>
+         <div class="subtitle org">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="referenceOrg" class="item"></span><br><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i></i></a></div>
+         <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
+         <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
+         <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
+         <div class="subtitle people">▶ Ancien parti politique<span href="#" id="political_party" class="item"></span></div>
+         <div class="subtitle people">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
       </div>
-    </nav>
-
-    <!-- Sidenav -->
-    <div id="sidenav" class="sidenav">
-        <h1 id="node" class="title"></h1>
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <div class="portrait text-center"><img id="portrait" class="d-none img-thumbnail" src="./img/portraits/Adrien Morenas.jpg" alt=""></div>
-        <div class="subtitle org">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="referenceOrg" class="item"></span><br><a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i></i></a></div>
-        <div class="subtitle people">▶ Position<span id="position" class="item"></span></div>
-        <div class="subtitle people">▶ Groupe<span id="group" class="item"></span></div>
-        <div class="subtitle people">▶ Scolarité<span href="#" id="education" class="item"></span></div>
-        <div class="subtitle people">▶ Ancien parti politique<span href="#" id="political_party" class="item"></span></div>
-        <div class="subtitle people">▶ <a href="https://www.faitsetdocuments.com/anciens-numeros.html" target="_blank"><i>Faits &amp; Documents</i></a><span id="reference" class="item"></span></div>
-    </div>
-
-    <!-- Page Content -->
-    <div class="tab-content" id="pageContent">
-      <div class="tab-pane fade show active" id="first" role="tabpanel" aria-labelledby="first-tab" data-area="Gouvernement">
+      <!-- Page Content -->
+      <div class="tab-content" id="pageContent">
+         <div class="tab-pane fade show active" id="first" role="tabpanel" aria-labelledby="first-tab" data-area="Gouvernement">
+         </div>
+         <div class="tab-pane fade" id="second" role="tabpanel" aria-labelledby="second-tab" data-area="Assemblée nationale">
+         </div>
+         <div class="tab-pane fade" id="third" role="tabpanel" aria-labelledby="third-tab" data-area="Sénat">
+         </div>
       </div>
-      <div class="tab-pane fade" id="second" role="tabpanel" aria-labelledby="second-tab" data-area="Assemblée nationale">
+      <!-- Button -->
+      <div class="toggle-button-container">
+         <input type="checkbox" checked data-toggle="toggle" data-on="Cartographie" data-off="Réseaux" data-onstyle="primary" data-offstyle="light">
+         <button class="toggle-button" data-mode="first" id="viewToggler">
+         Réseaux
+         </button>
       </div>
-      <div class="tab-pane fade" id="third" role="tabpanel" aria-labelledby="third-tab" data-area="Sénat">
-      </div>
-    </div>
-
-    <!-- Button -->
-    <div class="toggle-button-container">
-        <button class="toggle-button" data-mode="first" id="viewToggler">
-          Réseaux
-        </button>
-    </div>
-
-    <!-- JavaScript -->
-    <script src="libs/d3.v3.min.js"></script>
-    <script src="libs/d3-queue.v3.min.js"></script>
-    <script src="scripts/graphic.js"></script>
-    <script src="scripts/main.js"></script>
-</body>
-
+      <!-- JavaScript -->
+      <script src="libs/d3.v3.min.js"></script>
+      <script src="libs/d3-queue.v3.min.js"></script>
+      <script src="scripts/graphic.js"></script>
+      <script src="scripts/main.js"></script>
+   </body>
 </html>
